2016-02-22  Jim Fowler  <jrf@Biblion>

	* Tools/collection/update.py (UpDater): Started writing
	update class.  This class will provide the ability for
	item view windows to signal to list windows that the database
	has changed and that list windows should update their lists
	accordingly.

	* Tools/collection/mainWindow.py (Collection.__init__): Started
	adding hooks to support the update class.

	* Tools/collection/tasks.py (TaskView.__init__): Started adding
	hooks to support the update class.

2016-02-21  Jim Fowler  <jrf@Biblion>

	* Tools/collection/project.py (ProjectView): Added .replace("'", "''")
	to all string retrivals that are written into SQLite statements.
	See page 343 of Using SQLite.

	* Tools/collection/tasks.py (TaskView): Added .replace("'", "''")
	to all string retrivals that are written into SQLite statements.
	See page 343 of Using SQLite.

2016-02-20  Jim Fowler  <jrf@Biblion>

	* Tools/collection/version.py: added version.py.  Placed help
	string and version string inside and removed them from
	mainWindow.py.

2016-01-13  Jim Fowler  <jrf@Biblion>

	* Tools/scripts/CreateViews.sql: added viewAllBooks

	* Tools/collection/author.py (AuthorView): Write author class
	and tested.

	* Tools/collection/library.py
	(collectionDB.getBooksAssociatedByAuthor): Got query for
	getBooksAssociatedByAuthor() working.

	* Data/Authors.txt: removed timestamp 0:00:00 from all dates.

2016-01-10  Jim Fowler  <jrf@Biblion>

	* Tools/collection/tasks.py: Added task viewer.

	* Tools/collection/library.py
	(collectionDB.getBooksPublishedByVendor): Got query for
	getBooksPublishedByVendor() and getBooksPurchasedFromVendor()
	working today.

	* Tools/collection/vendor.py: started working on the
	vendor/publisher code. Cloned from projects.py

	* Tools/collection/designer/ui_vendor.ui: created dialog
	window for vendor/publisher views.

2016-01-09  Jim Fowler  <jrf@Biblion>

	* Tools/scripts/CreateTables.sql: Changed Vendor table field from